<resources>
    <string name="app_name">Week3Exercices1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="enter_your_message">Enter your message</string>
    <string name="chat">Chat</string>
    <string name="profile_trophy_text">trophy</string>
    <string name="fr_profile_age">31</string>
    <string name="poker">Poker</string>
    <string name="todo">TODO</string>
    <string name="user_text_name">Name</string>
</resources>
